--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -124,7 +124,10 @@
                       <div class="form-text">Comienza a escribir para filtrar y usa las flechas para elegir la empresa.</div>
                     </div>
                     <div class="col-lg-6">
-                      <label for="poSearch" class="form-label">PO / Pedido (selecciona sus extensiones)</label>
+                      <div class="d-flex flex-wrap align-items-center gap-2 mb-1">
+                        <label for="poSearch" class="form-label mb-0">PO / Pedido</label>
+                        <span id="poFoundList" class="small text-muted"></span>
+                      </div>
                       <select id="poSearch" class="form-select" data-searchable-select data-placeholder="Selecciona una PO base o extensión" data-empty-placeholder="Selecciona una empresa primero">
                         <option value="">Selecciona una empresa primero</option>
                       </select>
