--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -23,7 +23,6 @@
   <main class="container my-4">
     <section class="mb-4">
       <h2 class="fw-semibold">Dashboard de consumo de POs</h2>
-      <p class="text-muted">Sigue el flujo paso a paso: selecciona datos, personaliza el reporte y confirma antes de descargar.</p>
       <div class="card shadow-sm border-0">
         <div class="card-body pb-0">
           <ul class="nav nav-pills nav-fill nav-wizard" id="dashboardWizard" role="tablist">
@@ -38,16 +37,11 @@
         <div class="card-body">
           <div class="tab-content" id="dashboardWizardContent">
             <div class="tab-pane fade show active" id="panel-global" role="tabpanel" aria-labelledby="tab-global">
-              <div class="mb-4">
-                <h3 class="h5">Configura el alcance global</h3>
-                <p class="text-muted mb-0">Define el filtro del universo antes de elegir pedidos específicos. Puedes volver a este paso en cualquier momento.</p>
-              </div>
               <div class="card border-success-subtle shadow-sm" id="universeControls">
                 <div class="card-body">
                   <div class="d-flex flex-wrap justify-content-between align-items-start gap-3">
                     <div>
-                      <h3 class="h5 mb-1 text-success">Reporte universo de POs</h3>
-                      <p class="text-muted mb-2">Genera un resumen global del total autorizado, consumo y remanente sin necesidad de seleccionar una PO base.</p>
+                      <h3 class="h5 mb-1 text-success">Reporte por fechas</h3>
                       <p class="mb-1 small text-muted">Nombre comercial: <span id="universeCompanyLabel" class="fw-semibold">SSITEL</span></p>
                       <p class="mb-0 small text-muted">Empresa seleccionada: <span id="universeSelectedEmpresa" class="fw-semibold">Selecciona una empresa</span></p>
                     </div>
@@ -67,7 +61,6 @@
                       <select id="universeEmpresaSelect" class="form-select">
                         <option value="">Selecciona una empresa</option>
                       </select>
-                      <div class="form-text">Define desde aquí la empresa base del reporte universo.</div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                       <label for="universeFilterMode" class="form-label">Filtro del universo</label>
@@ -91,34 +84,28 @@
                       <label for="universeFormat" class="form-label">Formato de salida</label>
                       <select id="universeFormat" class="form-select">
                         <option value="pdf">PDF detallado</option>
-                        <option value="csv">CSV personalizado</option>
-                        <option value="json">JSON estructurado</option>
                       </select>
                     </div>
                     <div class="col-12 col-md-8">
                       <label for="universeFileName" class="form-label">Nombre del archivo (opcional)</label>
-                      <input type="text" id="universeFileName" class="form-control" placeholder="universo_SSITEL">
-                      <div class="form-text">No incluyas la extensión; se agregará automáticamente según el formato elegido.</div>
+                      <input type="text" id="universeFileName" class="form-control" placeholder="">
                     </div>
                   </div>
-                  <small class="text-muted d-block mt-3">El reporte universo usa el motor PDF directo o CSV personalizable y no requiere seleccionar POs base.</small>
                 </div>
               </div>
             </div>
             <div class="tab-pane fade" id="panel-personal" role="tabpanel" aria-labelledby="tab-personal">
               <div class="mb-4">
-                <h3 class="h5">Selecciona pedidos base y personaliza el reporte</h3>
-                <p class="text-muted mb-0">Agrega las POs que deseas analizar, ajusta el formato y revisa el resumen antes de descargar.</p>
+                <h3 class="h5">Selecciona pedidos</h3>
               </div>
               <div class="card shadow-sm border-0 mb-4">
                 <div class="card-body">
                   <div class="row g-3">
                     <div class="col-lg-6">
-                      <label for="empresaSearch" class="form-label">Empresa (búsqueda dinámica)</label>
+                      <label for="empresaSearch" class="form-label">Empresa</label>
                       <select id="empresaSearch" class="form-select" data-searchable-select data-placeholder="Selecciona una empresa">
                         <option value="">Cargando empresas...</option>
                       </select>
-                      <div class="form-text">Comienza a escribir para filtrar y usa las flechas para elegir la empresa.</div>
                     </div>
                     <div class="col-lg-6">
                       <div class="d-flex flex-wrap align-items-center gap-2 mb-1">
@@ -128,16 +115,15 @@
                       <select id="poSearch" class="form-select" data-searchable-select data-placeholder="Selecciona una PO base o extensión" data-empty-placeholder="Selecciona una empresa primero">
                         <option value="">Selecciona una empresa primero</option>
                       </select>
-                      <div class="form-text">Escribe para filtrar por número, fecha o monto y confirma con Enter.</div>
                     </div>
                     <div class="col-12">
                       <label class="form-label">POs seleccionadas para el dashboard y el reporte</label>
                       <div id="selectedPoContainer" class="selected-po-container">
-                        <p class="text-muted small mb-0">No hay POs seleccionadas. Utiliza el buscador para agregarlas.</p>
+                        <p class="text-muted small mb-0">No hay POs seleccionadas.</p>
                       </div>
                       <div class="d-flex flex-wrap align-items-center gap-2 mt-2">
                         <button id="clearSelectionBtn" class="btn btn-outline-secondary btn-sm" type="button">Limpiar selección</button>
-                        <small id="selectedPoHelp" class="text-muted">Agrega una PO base y luego elige manualmente qué extensiones deseas incluir.</small>
+                        <small id="selectedPoHelp" class="text-muted">Agrega una PO y elige manualmente qué extensiones deseas incluir.</small>
                       </div>
                       <div id="extensionSelectionContainer" class="mt-3"></div>
                     </div>
@@ -178,7 +164,6 @@
                           </div>
                           <span id="reportEngineStatus" class="badge text-bg-secondary d-none"></span>
                         </div>
-                        <small id="reportEngineHelp" class="text-muted d-block mt-3">El motor disponible es "PDF directo". Elige el formato de exportación preferido.</small>
                       </div>
                     </div>
                   </div>
@@ -201,14 +186,12 @@
                     </div>
                     <div id="collapseFileName" class="collapse">
                       <div class="card-body">
-                        <label for="reportFileNameInput" class="form-label">Personaliza el nombre del reporte</label>
-                        <input type="text" id="reportFileNameInput" class="form-control" placeholder="ej. consumo_PO_Q1">
-                        <div class="form-text">Si lo dejas vacío usaremos un nombre inteligente con base en las POs seleccionadas.</div>
+                        <input type="text" id="reportFileNameInput" class="form-control" placeholder="opcional">
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-12">
+                <!-- <div class="col-12">
                   <div class="card shadow-sm">
                     <div class="card-header bg-transparent border-0">
                       <button
@@ -315,7 +298,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
               <div class="card shadow-sm border-primary-subtle mb-4">
                 <div class="card-header bg-transparent border-0">
@@ -337,7 +320,6 @@
                     <div class="d-flex flex-wrap justify-content-between align-items-start gap-3">
                       <div class="flex-grow-1">
                         <h3 class="h5 mb-2">Resumen previo del reporte</h3>
-                        <p class="text-muted small mb-3">Verifica las POs seleccionadas y la configuración activa antes de descargar.</p>
                         <div class="d-flex flex-wrap align-items-center gap-2 mb-3">
                           <span class="badge text-bg-primary" id="overviewPoCount">0 POs base</span>
                           <span class="badge text-bg-light text-dark" id="overviewEmpresaBadge">Sin empresa</span>
@@ -354,17 +336,17 @@
                         <p class="mb-1"><span class="fw-semibold">Formato:</span> <span id="overviewFormatLabel">-</span></p>
                         <p class="mb-0"><span class="fw-semibold">Archivo:</span> <span id="overviewFilename">Se generará automáticamente</span></p>
                       </div>
-                      <div class="col-md-8">
+                      <!-- <div class="col-md-8">
                         <h4 class="h6 text-uppercase text-muted">Personalización activa</h4>
                         <div id="customizationSummary" class="d-flex flex-wrap gap-2"></div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
               </div>
               <div class="d-flex flex-wrap justify-content-between align-items-center gap-3">
                 <div class="d-flex flex-wrap align-items-center gap-2">
-                  <button class="btn btn-outline-secondary" type="button" data-wizard-action="prev">Volver a filtros globales</button>
+                  <!-- <button class="btn btn-outline-secondary" type="button" data-wizard-action="prev">Volver a filtros globales</button> -->
                   <div class="d-flex flex-column gap-1">
                     <button id="generateReportBtn" class="btn btn-primary">Previsualizar y descargar</button>
                     <small id="reportDownloadHelp" class="text-muted">Selecciona empresa y POs para habilitar la descarga.</small>
