--- a/renderer/admin.html
+++ b/renderer/admin.html
@@ -12,6 +12,7 @@
     <div class="container">
       <a class="navbar-brand fw-bold" href="dashboard.html">POrpt</a>
       <div class="d-flex gap-2">
+        <a class="btn btn-outline-light" href="dashboard.html">Dashboard</a>
         <a id="reportSettingsLink" class="btn btn-outline-light" href="report-settings.html">Configuración de reportes</a>
         <button class="btn btn-warning" onclick="logout()">Cerrar sesión</button>
       </div>
@@ -102,7 +103,6 @@
                 <div id="userCompanyChecklist" class="company-checklist">
                   <p class="text-muted small mb-0">No hay empresas seleccionadas.</p>
                 </div>
-                <div class="form-text">Agrega empresas con el selector o activa el acceso total con el conmutador.</div>
               </div>
             </div>
           </div>
