--- a/renderer/report-settings.html
+++ b/renderer/report-settings.html
@@ -27,13 +27,12 @@
             <div class="d-flex justify-content-between align-items-center flex-wrap gap-2">
               <div>
                 <h1 class="h5 mb-0">Configuración de reportes</h1>
-                <p class="text-muted mb-0 small">Ajusta la exportación en PDF y CSV junto con la identidad visual del reporte.</p>
               </div>
             </div>
           </div>
           <div class="card-body">
             <form id="reportSettingsForm" class="vstack gap-3">
-              <div class="alert alert-info small mb-0">
+              <!-- <div class="alert alert-info small mb-0">
                 El motor disponible es <strong>PDF directo</strong>, basado en <code>pdfkit</code>. Ajusta abajo los formatos de exportación y la personalización del contenido.
               </div>
               <div class="border rounded p-3 bg-body-tertiary">
@@ -130,7 +129,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <hr class="text-muted">
               <div class="vstack gap-3">
                 <div>
