--- a/renderer/report-settings.html
+++ b/renderer/report-settings.html
@@ -157,7 +157,7 @@
                   </div>
                   <div class="col-md-6">
                     <label for="brandingFooterText" class="form-label">Texto de pie de página</label>
-                    <input type="text" id="brandingFooterText" class="form-control" placeholder="PEOrpt • Aspel SAE 9">
+                    <input type="text" id="brandingFooterText" class="form-control" placeholder="PEOrpt • ICONET">
                   </div>
                   <div class="col-12">
                     <div class="form-check form-switch">
