Clarify grouped extension presentation

--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -395,7 +395,8 @@
           </div>
         </div>
 
-        <h3 class="h5 mb-3">Extensiones y consumo específico</h3>
+        <h3 class="h5 mb-1">Extensiones y consumo consolidado</h3>
+        <p class="small text-muted mb-3">Los datos combinan la PO base con las extensiones seleccionadas para mostrar el resultado del subgrupo.</p>
         <div id="extensionsContainer" class="extensions-grid mb-4"></div>
 
         <h3 class="h5 mb-2">Detalle de POs seleccionadas</h3>
