--- a/renderer/report-settings.html
+++ b/renderer/report-settings.html
@@ -139,7 +139,7 @@
                 <div class="row g-3">
                   <div class="col-md-6">
                     <label for="brandingHeaderTitle" class="form-label">Título del encabezado</label>
-                    <input type="text" id="brandingHeaderTitle" class="form-control" placeholder="Reporte de PEOs - Consumo">
+                    <input type="text" id="brandingHeaderTitle" class="form-control" placeholder="Reporte de POs - Consumo">
                   </div>
                   <div class="col-md-6">
                     <label for="brandingHeaderSubtitle" class="form-label">Subtítulo / descripción</label>
@@ -157,7 +157,7 @@
                   </div>
                   <div class="col-md-6">
                     <label for="brandingFooterText" class="form-label">Texto de pie de página</label>
-                    <input type="text" id="brandingFooterText" class="form-control" placeholder="PEOrpt • ICONET">
+                    <input type="text" id="brandingFooterText" class="form-control" placeholder="POrpt • ICONET">
                   </div>
                   <div class="col-12">
                     <div class="form-check form-switch">
