--- a/renderer/report-settings.html
+++ b/renderer/report-settings.html
@@ -143,7 +143,7 @@
                   </div>
                   <div class="col-md-6">
                     <label for="brandingHeaderSubtitle" class="form-label">Subtítulo / descripción</label>
-                    <input type="text" id="brandingHeaderSubtitle" class="form-control" placeholder="Consumo actualizado del pedido">
+                    <input type="text" id="brandingHeaderSubtitle" class="form-control" placeholder="">
                   </div>
                   <div class="col-md-6">
                     <label for="brandingCompanyName" class="form-label">Nombre comercial a mostrar</label>
