--- a/renderer/report-settings.html
+++ b/renderer/report-settings.html
@@ -150,15 +150,12 @@
                     <input type="text" id="brandingCompanyName" class="form-control" list="brandingCompanyNameOptions" placeholder="SSITEL">
                     <datalist id="brandingCompanyNameOptions">
                       <option value="SSITEL"></option>
-                      <option value="SSITEL, S.A. de C.V."></option>
-                      <option value="SSITEL Servicios"></option>
                     </datalist>
-                    <div class="form-text">Este nombre aparecerá en los encabezados de los reportes PDF.</div>
                   </div>
-                  <div class="col-md-6">
+                  <!-- <div class="col-md-6">
                     <label for="brandingFooterText" class="form-label">Texto de pie de página</label>
                     <input type="text" id="brandingFooterText" class="form-control" placeholder="POrpt • ICONET">
-                  </div>
+                  </div> -->
                   <div class="col-12">
                     <div class="form-check form-switch">
                       <input class="form-check-input" type="checkbox" role="switch" id="brandingLetterheadEnabled">
@@ -213,7 +210,6 @@
                 </div>
               </div>
               <div class="d-flex align-items-center justify-content-between gap-3">
-                <span class="text-muted small">Los cambios se guardan en <code>reports/report-settings.json</code>.</span>
                 <button type="submit" class="btn btn-success">Guardar configuración</button>
               </div>
             </form>
